--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           </li>
 
           <li>
-            <div class="menu_container menu1 show product">
+            <div class="menu_container menu1 next show product">
               <svg class="icon icon--secondery">
                 <use xlink:href="images/sprite.svg#product"></use>
               </svg>
@@ -88,7 +88,7 @@
           </li>
 
           <li>
-            <div class="menu_container menu1 show">
+            <div class="menu_container menu1  show">
               <svg class="icon icon--secondery">
                 <use xlink:href="images/sprite.svg#locations"></use>
               </svg>
@@ -101,7 +101,7 @@
           </li>
 
           <li>
-            <div class="menu_container menu1 show service ">
+            <div class="menu_container menu1 next show service ">
               <svg class="icon icon--secondery">
                 <use xlink:href="images/sprite.svg#servicess"></use>
               </svg>
@@ -126,7 +126,7 @@
             </div>
           </li>
           <li>
-            <div class="menu_container menu1 literature show">
+            <div class="menu_container menu1 next literature show">
               <svg class="icon icon--secondery">
                 <use xlink:href="images/sprite.svg#literature"></use>
               </svg>
@@ -150,7 +150,7 @@
             </div>
           </li>
           <li>
-            <div class="menu_container menu1 literature show">
+            <div class="menu_container menu1  literature show">
               <svg class="icon icon--secondery">
                 <use xlink:href="images/sprite.svg#login"></use>
               </svg>
@@ -162,7 +162,7 @@
             </div>
           </li>
           <li>
-            <div class="menu_container menu1 downarrow show">
+            <div class="menu_container menu1  downarrow show">
               <svg class="icon icon--secondery">
                 <use xlink:href="images/sprite.svg#about"></use>
               </svg>
@@ -190,7 +190,7 @@
 
 
 <li>
-  <div class="menu_container menu2 product paint">
+  <div class="menu_container next menu2 product paint">
     <div class="menu__text">Paint</div>
     <svg class="icon icon--primary">
       <use xlink:href="images/sprite.svg#downarrow"></use>
@@ -198,7 +198,7 @@
   </div>
 </li>
 <li>
-  <div class="menu_container menu2 product tools">
+  <div class="menu_container next menu2 product tools">
     <div class="menu__text">Tools</div>
     <svg class="icon icon--primary">
       <use xlink:href="images/sprite.svg#downarrow"></use>
@@ -206,7 +206,7 @@
   </div>
 </li>
 <li>
-  <div class="menu_container menu2 product building_materials">
+  <div class="menu_container menu2 next product building_materials">
     <div class="menu__text">Building Materials</div>
     <svg class="icon icon--primary">
       <use xlink:href="images/sprite.svg#downarrow"></use>
@@ -383,7 +383,7 @@
   </div>
 </li>
 <li>
-  <div class="menu_container menu3 paint interior_paint">
+  <div class="menu_container menu3 next paint interior_paint">
     <div class="menu__text">Interior Paint</div>
     <svg class="icon icon--primary">
       <use xlink:href="images/sprite.svg#downarrow"></use>
@@ -424,7 +424,7 @@
 </li>
 
 <li>
-  <div class="menu_container menu3 paint design_&_decor">
+  <div class="menu_container menu3 next paint design_&_decor">
     <div class="menu__text">Design & Decor</div>
     <svg class="icon icon--primary">
       <use xlink:href="images/sprite.svg#downarrow"></use>
@@ -465,7 +465,7 @@
 </li>
 
 <li>
-  <div class="menu_container menu3 paint exterior">
+  <div class="menu_container menu3 next paint exterior">
     <div class="menu__text">Exterior House, stain & Sealer</div>
     <svg class="icon icon--primary">
       <use xlink:href="images/sprite.svg#downarrow"></use>
@@ -506,7 +506,7 @@
 </li>
 
 <li>
-  <div class="menu_container menu3 paint primer_paint">
+  <div class="menu_container menu3 next paint primer_paint">
     <div class="menu__text">Primer Paint</div>
     <svg class="icon icon--primary">
       <use xlink:href="images/sprite.svg#downarrow"></use>
@@ -539,7 +539,7 @@
   </div>
 </li>
 <li>
-  <div class="menu_container menu3 paint Paint_sprayers_&_equipment">
+  <div class="menu_container menu3 next paint Paint_sprayers_&_equipment">
     <div class="menu__text">Paint Sprayers & Equipment</div>
     <svg class="icon icon--primary">
       <use xlink:href="images/sprite.svg#downarrow"></use>
@@ -572,7 +572,7 @@
 </li>
 
 <li>
-  <div class="menu_container menu3 Paint spray_paint">
+  <div class="menu_container menu3 next Paint spray_paint">
     <div class="menu__text">Spray Paint</div>
     <svg class="icon icon--primary">
       <use xlink:href="images/sprite.svg#downarrow"></use>
@@ -597,7 +597,7 @@
 </li>
 
 <li>
-  <div class="menu_container menu3 paint specialty_&_all_other_paint">
+  <div class="menu_container menu3 next paint specialty_&_all_other_paint">
     <div class="menu__text">Specialty & All Other Paint</div>
     <svg class="icon icon--primary">
       <use xlink:href="images/sprite.svg#downarrow"></use>
@@ -638,7 +638,7 @@
 </li>
 
 <li>
-  <div class="menu_container menu3 paint flux_finishes">
+  <div class="menu_container menu3 next paint flux_finishes">
     <div class="menu__text">Faux Finishes</div>
     <svg class="icon icon--primary">
       <use xlink:href="images/sprite.svg#downarrow"></use>
@@ -663,7 +663,7 @@
   </div>
 </li>
 <li>
-  <div class="menu_container menu3 paint interior_wood_Stains_&_sealers">
+  <div class="menu_container menu3 next paint interior_wood_Stains_&_sealers">
     <div class="menu__text">Interior Wood Stains & Sealers</div>
     <svg class="icon icon--primary">
       <use xlink:href="images/sprite.svg#downarrow"></use>
@@ -687,7 +687,7 @@
   </div>
 </li>
 <li>
-  <div class="menu_container menu3 paint paint_tools_&_supplies">
+  <div class="menu_container menu3 next paint paint_tools_&_supplies">
     <div class="menu__text">Paint Tools & Supplies</div>
     <svg class="icon icon--primary">
       <use xlink:href="images/sprite.svg#downarrow"></use>
@@ -783,7 +783,7 @@
   </div>
 </li>
 <li>
-  <div class="menu_container menu3 paint patch_caulk_&_sealants">
+  <div class="menu_container menu3 next paint patch_caulk_&_sealants">
     <div class="menu__text">Patch, Caulk & Sealants</div>
     <svg class="icon icon--primary">
       <use xlink:href="images/sprite.svg#downarrow"></use>
@@ -824,7 +824,7 @@
 </li>
 
 <li>
-  <div class="menu_container menu3 paint glues_epoxies">
+  <div class="menu_container menu3 next paint glues_epoxies">
     <div class="menu__text">Glues & Epoxies</div>
     <svg class="icon icon--primary">
       <use xlink:href="images/sprite.svg#downarrow"></use>
@@ -865,7 +865,7 @@
 </li>
 
 <li>
-  <div class="menu_container menu3 paint cleaning_supplies">
+  <div class="menu_container menu3 next paint cleaning_supplies">
     <div class="menu__text">Cleaning Supplies</div>
     <svg class="icon icon--primary">
       <use xlink:href="images/sprite.svg#downarrow"></use>
@@ -902,7 +902,7 @@
 <!-- tools  menu -->
 
 <li>
-  <div class="menu_container menu3 tools hand_tools">
+  <div class="menu_container menu3 next tools hand_tools">
     <div class="menu__text">Hand Tools</div>
     <svg class="icon icon--primary">
       <use xlink:href="images/sprite.svg#downarrow"></use>
@@ -1041,7 +1041,7 @@
 </li>
 
 <li>
-  <div class="menu_container menu3 tools power_tools">
+  <div class="menu_container menu3 next tools power_tools">
     <div class="menu__text">Power Tool</div>
     <svg class="icon icon--primary">
       <use xlink:href="images/sprite.svg#downarrow"></use>
@@ -1148,7 +1148,7 @@
 </li>
 
 <li>
-  <div class="menu_container menu3 tools power_tool_accessories">
+  <div class="menu_container menu3 next tools power_tool_accessories">
     <div class="menu__text">Power Tool Accessories</div>
     <svg class="icon icon--primary">
       <use xlink:href="images/sprite.svg#downarrow"></use>
@@ -1229,7 +1229,7 @@
 </li>
 
 </li><li>
-  <div class="menu_container menu3 tools wet_&_dry_vacuums">
+  <div class="menu_container menu3 next tools wet_&_dry_vacuums">
     <div class="menu__text">Wet & Dry Vacuums</div>
     <svg class="icon icon--primary">
       <use xlink:href="images/sprite.svg#downarrow"></use>
@@ -1255,7 +1255,7 @@
 </li>
 
 <li>
-  <div class="menu_container menu3 tools tool_storage_and_stands">
+  <div class="menu_container menu3 next tools tool_storage_and_stands">
     <div class="menu__text">Tool Storage and Stands</div>
     <svg class="icon icon--primary">
       <use xlink:href="images/sprite.svg#downarrow"></use>
@@ -1292,7 +1292,7 @@
 <!-- building_materials -->
 
 <li>
-  <div class="menu_container menu3 building_materials lamber">
+  <div class="menu_container menu3 next building_materials lamber">
     <div class="menu__text">Lamber</div>
     <svg class="icon icon--primary">
       <use xlink:href="images/sprite.svg#downarrow"></use>
@@ -1383,7 +1383,7 @@
 </li>
 
 <li>
-  <div class="menu_container menu3 building_materials insulation">
+  <div class="menu_container menu3 next building_materials insulation">
     <div class="menu__text">Insulation</div>
     <svg class="icon icon--primary">
       <use xlink:href="images/sprite.svg#downarrow"></use>
@@ -1416,14 +1416,14 @@
   </div>
 </li>
 <li>
-  <div class="menu_container menu3 building_materials ">
+  <div class="menu_container menu3  building_materials ">
     <div class="menu__text">Fiberglass Insulation</div>
     <svg class="icon icon--primary">
       <use xlink:href="images/sprite.svg#downarrow"></use>
     </svg>
   </div>
 </li>
-        </ul>
+</ul>
       </div>
 
       <div class="mini--cart">
