menu issu fixed

--- a/index.html
+++ b/index.html
@@ -1229,7 +1229,7 @@
 </li>
 
 </li><li>
-  <div class="menu_container menu3 next tools wet_&_dry_vacuums">
+  <div class="menu_container menu3 next tools wet_dry_vacuums">
     <div class="menu__text">Wet & Dry Vacuums</div>
     <svg class="icon icon--primary">
       <use xlink:href="images/sprite.svg#downarrow"></use>
@@ -1238,7 +1238,7 @@
 </li>
 </li>
 <li>
-  <div class="menu_container menu4 wet_&_dry_vacuums">
+  <div class="menu_container menu4 wet_dry_vacuums">
     <div class="menu__text">Vacuums</div>
     <svg class="icon icon--primary">
       <use xlink:href="images/sprite.svg#downarrow"></use>
@@ -1246,7 +1246,7 @@
   </div>
 </li>
 <li>
-  <div class="menu_container menu4 wet_&_dry_vacuums">
+  <div class="menu_container menu4 wet_dry_vacuums">
     <div class="menu__text">Vacuum Accessories</div>
     <svg class="icon icon--primary">
       <use xlink:href="images/sprite.svg#downarrow"></use>
