--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
 </li>
 
 <li>
-  <div class="menu_container menu3 next paint design_&_decor">
+  <div class="menu_container menu3 next paint design_decor">
     <div class="menu__text">Design & Decor</div>
     <svg class="icon icon--primary">
       <use xlink:href="images/sprite.svg#downarrow"></use>
@@ -432,7 +432,7 @@
   </div>
 </li>
 <li>
-  <div class="menu_container menu4 design_&_decor">
+  <div class="menu_container menu4 design_decor">
     <div class="menu__text">Hunter Douglas</div>
     <svg class="icon icon--primary">
       <use xlink:href="images/sprite.svg#downarrow"></use>
@@ -440,7 +440,7 @@
   </div>
 </li>
 <li>
-  <div class="menu_container menu4 design_&_decor">
+  <div class="menu_container menu4 design_decor">
     <div class="menu__text">Butcher Block</div>
     <svg class="icon icon--primary">
       <use xlink:href="images/sprite.svg#downarrow"></use>
@@ -448,7 +448,7 @@
   </div>
 </li>
 <li>
-  <div class="menu_container menu4 design_&_decor">
+  <div class="menu_container menu4 design_decor">
     <div class="menu__text">Vanities & Tops</div>
     <svg class="icon icon--primary">
       <use xlink:href="images/sprite.svg#downarrow"></use>
@@ -539,7 +539,7 @@
   </div>
 </li>
 <li>
-  <div class="menu_container menu3 next paint Paint_sprayers_&_equipment">
+  <div class="menu_container menu3 next paint Paint_sprayers_equipment">
     <div class="menu__text">Paint Sprayers & Equipment</div>
     <svg class="icon icon--primary">
       <use xlink:href="images/sprite.svg#downarrow"></use>
@@ -547,7 +547,7 @@
   </div>
 </li>
 <li>
-  <div class="menu_container menu4 Paint_sprayers_&_equipment">
+  <div class="menu_container menu4 Paint_sprayers_equipment">
     <div class="menu__text">Paint Sprayers</div>
     <svg class="icon icon--primary">
       <use xlink:href="images/sprite.svg#downarrow"></use>
@@ -555,7 +555,7 @@
   </div>
 </li>
 <li>
-  <div class="menu_container menu4 Paint_sprayers_&_equipment">
+  <div class="menu_container menu4 Paint_sprayers_equipment">
     <div class="menu__text">Sprayer Filters & Accessories</div>
     <svg class="icon icon--primary">
       <use xlink:href="images/sprite.svg#downarrow"></use>
@@ -563,7 +563,7 @@
   </div>
 </li>
 <li>
-  <div class="menu_container menu4 Paint_sprayers_&_equipment">
+  <div class="menu_container menu4 Paint_sprayers_equipment">
     <div class="menu__text">Sprayer Guns & Tips</div>
     <svg class="icon icon--primary">
       <use xlink:href="images/sprite.svg#downarrow"></use>
@@ -597,7 +597,7 @@
 </li>
 
 <li>
-  <div class="menu_container menu3 next paint specialty_&_all_other_paint">
+  <div class="menu_container menu3 next paint specialty_all_other_paint">
     <div class="menu__text">Specialty & All Other Paint</div>
     <svg class="icon icon--primary">
       <use xlink:href="images/sprite.svg#downarrow"></use>
@@ -605,7 +605,7 @@
   </div>
 </li>
 <li>
-  <div class="menu_container menu4 specialty_&_all_other_paint">
+  <div class="menu_container menu4 specialty_all_other_paint">
     <div class="menu__text">Floor Coatings</div>
     <svg class="icon icon--primary">
       <use xlink:href="images/sprite.svg#downarrow"></use>
@@ -613,7 +613,7 @@
   </div>
 </li>
 <li>
-  <div class="menu_container menu4 specialty_&_all_other_paint">
+  <div class="menu_container menu4 specialty_all_other_paint">
     <div class="menu__text">Specialty Coatings</div>
     <svg class="icon icon--primary">
       <use xlink:href="images/sprite.svg#downarrow"></use>
@@ -621,7 +621,7 @@
   </div>
 </li>
 <li>
-  <div class="menu_container menu4 specialty_&_all_other_paint">
+  <div class="menu_container menu4 specialty_all_other_paint">
     <div class="menu__text">Metel Coatings</div>
     <svg class="icon icon--primary">
       <use xlink:href="images/sprite.svg#downarrow"></use>
@@ -629,7 +629,7 @@
   </div>
 </li>
 <li>
-  <div class="menu_container menu4 specialty_&_all_other_paint">
+  <div class="menu_container menu4 specialty_all_other_paint">
     <div class="menu__text">Masonry Coatings</div>
     <svg class="icon icon--primary">
       <use xlink:href="images/sprite.svg#downarrow"></use>
@@ -663,7 +663,7 @@
   </div>
 </li>
 <li>
-  <div class="menu_container menu3 next paint interior_wood_Stains_&_sealers">
+  <div class="menu_container menu3 next paint interior_wood_Stains_sealers">
     <div class="menu__text">Interior Wood Stains & Sealers</div>
     <svg class="icon icon--primary">
       <use xlink:href="images/sprite.svg#downarrow"></use>
@@ -671,7 +671,7 @@
   </div>
 </li>
 <li>
-  <div class="menu_container menu4 interior_wood_Stains_&_sealers">
+  <div class="menu_container menu4 interior_wood_Stains_sealers">
     <div class="menu__text">Clears & Finish Coatings</div>
     <svg class="icon icon--primary">
       <use xlink:href="images/sprite.svg#downarrow"></use>
@@ -679,7 +679,7 @@
   </div>
 </li>
 <li>
-  <div class="menu_container menu4 interior_wood_Stains_&_sealers">
+  <div class="menu_container menu4 interior_wood_Stains_sealers">
     <div class="menu__text">Stains & Sealers</div>
     <svg class="icon icon--primary">
       <use xlink:href="images/sprite.svg#downarrow"></use>
@@ -687,7 +687,7 @@
   </div>
 </li>
 <li>
-  <div class="menu_container menu3 next paint paint_tools_&_supplies">
+  <div class="menu_container menu3 next paint paint_tools_supplies">
     <div class="menu__text">Paint Tools & Supplies</div>
     <svg class="icon icon--primary">
       <use xlink:href="images/sprite.svg#downarrow"></use>
@@ -695,7 +695,7 @@
   </div>
 </li>
 <li>
-  <div class="menu_container menu4 paint_tools_&_supplies">
+  <div class="menu_container menu4 paint_tools_supplies">
     <div class="menu__text">Paint Rollers & Frames</div>
     <svg class="icon icon--primary">
       <use xlink:href="images/sprite.svg#downarrow"></use>
@@ -703,7 +703,7 @@
   </div>
 </li>
 <li>
-  <div class="menu_container menu4 paint_tools_&_supplies">
+  <div class="menu_container menu4 paint_tools_supplies">
     <div class="menu__text">Paint Brushes & Applicators</div>
     <svg class="icon icon--primary">
       <use xlink:href="images/sprite.svg#downarrow"></use>
@@ -711,7 +711,7 @@
   </div>
 </li>
 <li>
-  <div class="menu_container menu4 paint_tools_&_supplies">
+  <div class="menu_container menu4 paint_tools_supplies">
     <div class="menu__text">Tape, Masking Paper & Film</div>
     <svg class="icon icon--primary">
       <use xlink:href="images/sprite.svg#downarrow"></use>
@@ -719,7 +719,7 @@
   </div>
 </li>
 <li>
-  <div class="menu_container menu4 paint_tools_&_supplies">
+  <div class="menu_container menu4 paint_tools_supplies">
     <div class="menu__text">Respirators, Masks & Safety Equipment</div>
     <svg class="icon icon--primary">
       <use xlink:href="images/sprite.svg#downarrow"></use>
@@ -727,7 +727,7 @@
   </div>
 </li>
 <li>
-  <div class="menu_container menu4 paint_tools_&_supplies">
+  <div class="menu_container menu4 paint_tools_supplies">
     <div class="menu__text">Masking Paper & Film</div>
     <svg class="icon icon--primary">
       <use xlink:href="images/sprite.svg#downarrow"></use>
@@ -735,7 +735,7 @@
   </div>
 </li>
 <li>
-  <div class="menu_container menu4 paint_tools_&_supplies">
+  <div class="menu_container menu4 paint_tools_supplies">
     <div class="menu__text">Paint Buckets, Trays & Liners</div>
     <svg class="icon icon--primary">
       <use xlink:href="images/sprite.svg#downarrow"></use>
@@ -743,7 +743,7 @@
   </div>
 </li>
 <li>
-  <div class="menu_container menu4 paint_tools_&_supplies">
+  <div class="menu_container menu4 paint_tools_supplies">
     <div class="menu__text">Drop Cloths & Plastic Sheeting</div>
     <svg class="icon icon--primary">
       <use xlink:href="images/sprite.svg#downarrow"></use>
@@ -751,7 +751,7 @@
   </div>
 </li>
 <li>
-  <div class="menu_container menu4 paint_tools_&_supplies">
+  <div class="menu_container menu4 paint_tools_supplies">
     <div class="menu__text">Paint Apparel</div>
     <svg class="icon icon--primary">
       <use xlink:href="images/sprite.svg#downarrow"></use>
@@ -759,7 +759,7 @@
   </div>
 </li>
 <li>
-  <div class="menu_container menu4 paint_tools_&_supplies">
+  <div class="menu_container menu4 paint_tools_supplies">
     <div class="menu__text">Paint Mixers, Knives & Tools</div>
     <svg class="icon icon--primary">
       <use xlink:href="images/sprite.svg#downarrow"></use>
@@ -767,7 +767,7 @@
   </div>
 </li>
 <li>
-  <div class="menu_container menu4 paint_tools_&_supplies">
+  <div class="menu_container menu4 paint_tools_supplies">
     <div class="menu__text">Sandpaper & Sanding Tools</div>
     <svg class="icon icon--primary">
       <use xlink:href="images/sprite.svg#downarrow"></use>
@@ -775,7 +775,7 @@
   </div>
 </li>
 <li>
-  <div class="menu_container menu4 paint_tools_&_supplies">
+  <div class="menu_container menu4 paint_tools_supplies">
     <div class="menu__text">Paint Thinners, Solvents & Additives</div>
     <svg class="icon icon--primary">
       <use xlink:href="images/sprite.svg#downarrow"></use>
@@ -783,7 +783,7 @@
   </div>
 </li>
 <li>
-  <div class="menu_container menu3 next paint patch_caulk_&_sealants">
+  <div class="menu_container menu3 next paint patch_caulk_sealants">
     <div class="menu__text">Patch, Caulk & Sealants</div>
     <svg class="icon icon--primary">
       <use xlink:href="images/sprite.svg#downarrow"></use>
@@ -791,7 +791,7 @@
   </div>
 </li>
 <li>
-  <div class="menu_container menu4 patch_caulk_&_sealants">
+  <div class="menu_container menu4 patch_caulk_sealants">
     <div class="menu__text">Caulk Guns & Caulk Accessories</div>
     <svg class="icon icon--primary">
       <use xlink:href="images/sprite.svg#downarrow"></use>
@@ -799,7 +799,7 @@
   </div>
 </li>
 <li>
-  <div class="menu_container menu4 patch_caulk_&_sealants">
+  <div class="menu_container menu4 patch_caulk_sealants">
     <div class="menu__text">Patch & Repair</div>
     <svg class="icon icon--primary">
       <use xlink:href="images/sprite.svg#downarrow"></use>
@@ -807,7 +807,7 @@
   </div>
 </li>
 <li>
-  <div class="menu_container menu4 patch_caulk_&_sealants">
+  <div class="menu_container menu4 patch_caulk_sealants">
     <div class="menu__text">Filler & Putty</div>
     <svg class="icon icon--primary">
       <use xlink:href="images/sprite.svg#downarrow"></use>
@@ -815,7 +815,7 @@
   </div>
 </li>
 <li>
-  <div class="menu_container menu4 patch_caulk_&_sealants">
+  <div class="menu_container menu4 patch_caulk_sealants">
     <div class="menu__text">Caulk & Sealant</div>
     <svg class="icon icon--primary">
       <use xlink:href="images/sprite.svg#downarrow"></use>
