update chat icon

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               </svg>
             </div>
           </div>
-          <div class="location">
+          <!-- <div class="location">
             <div class="location__text">
               <article class="head_line">Stratford, CT dlkflsdjflsdjkf</article>
               <article class="time_line">Open until 7 PM</article>
@@ -52,7 +52,8 @@
             <svg class="icon icon--small">
               <use xlink:href="images/sprite.svg#downarrow"></use>
             </svg>
-          </div>
+          </div> -->
+          <div data-id="265b4daf5f" class="livechat_button "></div>
           <svg class="icon user">
             <use xlink:href="images/sprite.svg#user"></use>
           </svg>
