position mini cart position

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
       <div class="top_bar">
         <a class="top_bar__text" href="#">Quantities are limited. Read More ></a> 
       </div>
+      <div class="header__section">
+
       <nav class="nav">
         <div class="nav__container">
           <svg class="icon house icon--primary">
@@ -167,6 +169,7 @@
           </ul>
         </div>
         <div class="bottom__btn"><article>View and Edit Cart</article></div>
+      </div>
       </div>
     </div>
 
