top bar updated

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <div class="top_bar">
         <a class="top_bar__text" href="#">Quantities are limited. Read More ></a> 
       </div>
+      
       <div class="header__section">
 
       <nav class="nav">
@@ -172,6 +173,10 @@
       </div>
       </div>
     </div>
+    <div class="body__content">
+      
+
+    </div> 
 
     <script src="/js/main.js"></script>
   </body>
