update location componant

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="new_header">
       <div class="top_bar">
-        <a class="top_bar__text" href="#">Quantities are limited. Read More ></a> 
+        <div class="top_bar__text" href="#">Quantities are limited. <a href="">Learn More ></a></div> 
       </div>
       
       <div class="header__section">
@@ -24,6 +24,16 @@
           <svg class="icon large_house icon--primary">
             <use xlink:href="images/sprite.svg#brandLogo"></use>
           </svg>
+          <div class="location">
+            <div class="location__text">
+              <article class="head_line">Stratford, Harvest </article>
+              <article class="time_line">Open until 7 PM</article>
+            </div>
+
+            <svg class="icon icon--small">
+              <use xlink:href="images/sprite.svg#downarrow"></use>
+            </svg>
+          </div>
           <div class="icon--container icon--menu menu_icon_container">
             <svg class="icon berger_icon">
               <use xlink:href="images/sprite.svg#menu"></use>
@@ -33,7 +43,7 @@
             </svg>
           </div>
 
-          <div class="input-group">
+          <div class="input-group search_bar">
             <input
               class="input"
               type="text"
@@ -46,20 +56,23 @@
               </svg>
             </div>
           </div>
-          <!-- <div class="location">
-            <div class="location__text">
-              <article class="head_line">Stratford, CT dlkflsdjflsdjkf</article>
-              <article class="time_line">Open until 7 PM</article>
+          
+          <!-- <div data-id="265b4daf5f" class="livechat_button "></div> -->
+          <svg class="icon user">
+            <use xlink:href="images/sprite2.svg#chat"></use>
+          </svg>
+          <!-- <svg class="icon user">
+            <use xlink:href="images/sprite.svg#user"></use>
+          </svg> -->
+          <div class="user_account">
+            <div class="user_account__text">
+              <article class="name_line">Signed-in as <span class="name" >RBORGBR</span></article>
+              <article class="address_line">Main St, Wethersfield</article>
             </div>
-
             <svg class="icon icon--small">
               <use xlink:href="images/sprite.svg#downarrow"></use>
             </svg>
-          </div> -->
-          <div data-id="265b4daf5f" class="livechat_button "></div>
-          <svg class="icon user">
-            <use xlink:href="images/sprite.svg#user"></use>
-          </svg>
+          </div>
           <div class="icon--container cart_icon_container icon--cart">
             <svg class="icon cart_icon">
               <use xlink:href="images/sprite.svg#shoppingCart"></use>
