element size updated

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <input
               class="input"
               type="text"
-              placeholder="Search entire story here..."
+              placeholder="Search entire store here..."
               id="input"
             />
             <div class="btn btn-search">
@@ -58,12 +58,12 @@
           </div>
           
           <!-- <div data-id="265b4daf5f" class="livechat_button "></div> -->
-          <svg class="icon user">
+          <svg class="icon">
             <use xlink:href="images/sprite2.svg#chat"></use>
           </svg>
-          <!-- <svg class="icon user">
+          <svg class="icon user">
             <use xlink:href="images/sprite.svg#user"></use>
-          </svg> -->
+          </svg>
           <div class="user_account">
             <div class="user_account__text">
               <article class="name_line">Signed-in as <span class="name" >RBORGBR</span></article>
@@ -86,6 +86,35 @@
           </svg>
         </div>
       </nav>
+
+      <div class="sub_nav" >
+        <div class="sub_nav__container">
+
+          <div class="location">
+              <div class="location_header">
+                <article>My Store</article>
+                <svg class="icon icon--small">
+                  <use xlink:href="images/sprite.svg#downarrow"></use>
+                </svg>
+              </div>
+              <article class="head_line">Stratford, Harvest Ave.</article>
+              <article class="time_line">Open until 7 PM</article>
+          
+          </div>
+
+          <div class="user_account">
+            <div class="user_account_header">
+              <article>My Account</article>
+              <svg class="icon icon--small">
+              <use xlink:href="images/sprite.svg#downarrow"></use>
+            </svg>
+            </div>
+              <article class="name_line">RBORGBR</article>
+              <article class="address_line">Main St, Wethersfield</article>
+          </div>
+
+        </div>
+      </div>
 
       <div class="side--nav">
         <div class="carousel">
