updated for extra small screen

--- a/index.html
+++ b/index.html
@@ -90,27 +90,27 @@
       <div class="sub_nav" >
         <div class="sub_nav__container">
 
-          <div class="location">
-              <div class="location_header">
+          <div class="location sub_nav_item">
+              <div class="sub_nav_header">
                 <article>My Store</article>
                 <svg class="icon icon--small">
                   <use xlink:href="images/sprite.svg#downarrow"></use>
                 </svg>
               </div>
-              <article class="head_line">Stratford, Harvest Ave.</article>
-              <article class="time_line">Open until 7 PM</article>
+              <article class="sub_nav_head_line">Stratford, Harvest Ave.</article>
+              <article class="sub_nav_tag_line">Open until 7 PM</article>
           
           </div>
 
-          <div class="user_account">
-            <div class="user_account_header">
+          <div class="user_account sub_nav_item">
+            <div class="sub_nav_header">
               <article>My Account</article>
               <svg class="icon icon--small">
               <use xlink:href="images/sprite.svg#downarrow"></use>
             </svg>
             </div>
-              <article class="name_line">RBORGBR</article>
-              <article class="address_line">Main St, Wethersfield</article>
+              <article class="sub_nav_head_line">RBORGBR</article>
+              <article class="sub_nav_tag_line">Main St, Wethersfield</article>
           </div>
 
         </div>
