updated user toggle

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </div>
 
             <!-- <div data-id="265b4daf5f" class="livechat_button "></div> -->
-            <svg class="icon">
+            <svg class="icon chat">
               <use xlink:href="images/sprite2.svg#chat"></use>
             </svg>
             <svg class="icon user">
