--- a/index.html
+++ b/index.html
@@ -190,9 +190,6 @@
           <div class="bottom__btn"><article>View and Edit Cart</article></div>
         </div>
       </div>
-    </div>
-
-    <div class="body__content">
       <div class="sub_nav">
         <div class="sub_nav__container">
           <div class="location sub_nav_item">
@@ -218,11 +215,23 @@
           </div>
         </div>
       </div>
-      <div style="display:flex; justify-content: center;align-items: center;height: 25%; margin-top: 50px; margin:auto;">
-        <button class="btn product_page">Product page toggle</button>
-        <button class="btn User_login">User login toggle</button>
-      </div>
     </div>
+
+    <div class="body__content">
+    <div
+      style="
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 25%;
+        margin-top: 50px;
+        margin: auto;
+      "
+    >
+      <button class="btn product_page">Product page toggle</button>
+      <button class="btn User_login">User login toggle</button>
+    </div>
+  </div>
 
     <script src="/js/main.js"></script>
   </body>
