--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <svg class="icon house icon--primary">
               <use xlink:href="images/sprite.svg#house"></use>
             </svg>
-            <svg class="icon large_house icon--primary">
+            <svg  class="icon large_house icon--primary">
               <use xlink:href="images/sprite.svg#brandLogo"></use>
             </svg>
             <div class="location">
@@ -34,6 +34,7 @@
               <svg class="icon icon--small">
                 <use xlink:href="images/sprite.svg#downarrow"></use>
               </svg>
+
             </div>
             <div class="icon--container icon--menu menu_icon_container">
               <svg class="icon berger_icon">
@@ -55,16 +56,18 @@
                 <svg class="icon icon--light icon--small">
                   <use xlink:href="images/sprite.svg#search"></use>
                 </svg>
+                
               </div>
             </div>
 
             <!-- <div data-id="265b4daf5f" class="livechat_button "></div> -->
             <svg class="icon chat">
-              <use xlink:href="images/sprite2.svg#chat"></use>
+              <use xlink:href="images/sprite.svg#chat"></use>
             </svg>
             <svg class="icon user">
               <use xlink:href="images/sprite.svg#user"></use>
             </svg>
+
             <div class="user_account">
               <div class="user_account__text">
                 <article class="name_line">
@@ -74,7 +77,7 @@
               </div>
               <svg class="icon icon--small">
                 <use xlink:href="images/sprite.svg#downarrow"></use>
-              </svg>
+              </svg> 
             </div>
             <div class="icon--container cart_icon_container icon--cart">
               <svg class="icon cart_icon">
@@ -83,6 +86,7 @@
               <svg class="icon cart_close_icon">
                 <use xlink:href="images/sprite.svg#close"></use>
               </svg>
+
             </div>
             <svg class="icon icon--small search_close">
               <use xlink:href="images/sprite.svg#close"></use>
@@ -208,7 +212,7 @@
               <article>My Account</article>
               <svg class="icon icon--small">
                 <use xlink:href="images/sprite.svg#downarrow"></use>
-              </svg>
+              </svg>  
             </div>
             <article class="sub_nav_head_line">RBORGBR</article>
             <article class="sub_nav_tag_line">Main St, Wethersfield</article>
@@ -232,6 +236,8 @@
         <button class="btn User_login">User login toggle</button>
       </div>
     </div>
+
+    
 
     <script src="/js/main.js"></script>
   </body>
